fix: fix collapsed counter styles

--- a/packages/kite-chat-component/src/components/kite-toast-notification/kite-toast-notification.css
+++ b/packages/kite-chat-component/src/components/kite-toast-notification/kite-toast-notification.css
@@ -53,11 +53,11 @@ span.toggle {
 }
 
 span.collapsed {
-    @apply absolute left-0 bottom-2 text-center w-full;
+    @apply flex-1 absolute left-0 bottom-2 text-center w-full;
 }
 
 span.icon {
-    @apply flex flex-1 flex-col px-1.5 pb-4 pt-2 max-w-[20px] relative;
+    @apply flex flex-col px-1.5 pb-4 pt-2 relative;
 }
 
 :host([duration][state="active"]) span.icon::after {
